Prepare p4c for submission to the Bazel Central Registry (#5455) (#5497)
Signed-off-by: Steffen Smolka <steffen.smolka@gmail.com>

--- a/.bazelignore
+++ b/.bazelignore
@@ -3,3 +3,8 @@ control-plane/p4runtime
 test/frameworks/gtest
 bazel/example
 build
+# Bazel output symlinks.
+bazel-bin
+bazel-out
+bazel-testlogs
+bazel-p4c
